--- a/resources/views/perfil.ejs
+++ b/resources/views/perfil.ejs
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/Acerca">Acerca de</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="/Perfil">Mi Perfil</a></li>
+            </ul>
+        </nav>
+    </header>
     <section class="perfil-usuario">
         <div class="contenedor-perfil">
             <div class="portada-perfil">
@@ -75,7 +84,9 @@
             </div>
         </div>
     </section>
-
+    <footer>
+        <p>&copy; 2024 LUKY. Todos los derechos reservados.</p>
+    </footer>
     <form id="logout-form" action="/auth/logout" method="POST" style="display: none;"></form>
 
     <script>
