--- a/resources/views/buqueda.ejs
+++ b/resources/views/buqueda.ejs
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="/Acerca">Acerca de</a></li>
-                <li><a href="#">Servicios</a></li>
+                <li><a href="/Busqueda">Servicios</a></li>
                 <li><a href="/Perfil">Mi Perfil</a></li>
             </ul>
         </nav>
