--- a/resources/views/perfil.ejs
+++ b/resources/views/perfil.ejs
@@ -41,6 +41,7 @@
             <div class="menu-perfil">
                 <ul>
                     <li><a id="agregar-publicacion"> <i class="icono-perfil fas fa-bullhorn"></i> Agregar Publicación</a></li>
+                    <li><a id="agregar-publicacion"> <i class="icono-perfil fas fa-bullhorn"></i> Editar Perfil</a></li>
                     <li><a href="#" title="Cerrar Sesión" onclick="document.getElementById('logout-form').submit();"><i class="icono-perfil fas fa-bullhorn"></i> Cerrar Sesión</a></li>
                 </ul>
             </div>
@@ -57,6 +58,10 @@
                         <p>Precio Inicial: <%= publicacion.precioI %></p>
                         <p>Precio Final: <%= publicacion.precioF %></p>
                         <p>Valoración: <%= publicacion.valoracion %></p>
+                        <div class="post-buttons">
+                            <button class="edit-btn">Editar Publicación</button>
+                            <button class="delete-btn">Eliminar Publicación</button>
+                        </div>
                     </div>
                 <% }) %>
             <% } %>
