--- a/resources/public/css/perfil.css
+++ b/resources/public/css/perfil.css
@@ -623,7 +623,7 @@ textarea {
     padding: 10px 20px;
     border: none;
     color: white;
-    background-color: #3AB397; /* Color de botón por defecto */
+    background-color: #3AA8AD; /* Color de botón por defecto */
     cursor: pointer;
 }
 
