Ultimo cambio al perfil.css

--- a/resources/public/css/perfil.css
+++ b/resources/public/css/perfil.css
@@ -401,7 +401,7 @@ footer {
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
-    background-color: #3AB397;
+    background-color: #3AA8AD;
     color: white;
 }
 
