--- a/resources/public/css/perfil.css
+++ b/resources/public/css/perfil.css
@@ -477,7 +477,7 @@ textarea {
 #edit-modal-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: justify;
 }
 
 #edit-modal-form button {
