--- a/resources/views/formulario.ejs
+++ b/resources/views/formulario.ejs
@@ -100,7 +100,7 @@
             window.location.href = '/auth/google';
         });
     </script>
-    <script src="js/formulario.js"></script>
+    <script src="/js/formulario.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
